feat(auth): replace CustomPasswordEncoder with PasswordEncoder for consistency in password handling